--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=demo
+
+# Server
+server.port=8080
+
+# Database connection (local MySQL for now)
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=myuser
+spring.datasource.password=mypass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
